--- a/contacte.html
+++ b/contacte.html
@@ -13,16 +13,26 @@
             <h1>THE ATELIER OF DESING</h1>
         </div>
         <div id="inici"></div>
-            <h2>Qui som?</h2>
+        <h2><p>Aquest és apartat de contacte!</p></h2>
         </div>
         <div id="seccio_1">
-            <p>Que pots fer en aquesta app?</p>
+            <p>Aquí es podrà posar en contacte amb nosaltres 
+                per a indicar-nos qualsevol dubte que pugui tenir. 
+                Estarem encantats d'ajudar-lo. 
+                A continuació, el Gmail al qual dirigir-se davant qualsevol error.
+
+                theatelierofdesing@gmail.com</p>
         </div>
         <div id="seccio_2">
-            <p>Com s'utilitza?</p>
+            <h2>Com s'utilitza?</h2>
+            <p> El procediment per a utilitzar l'apartat de contacte és simple,
+             l'únic que ha de fer és, davant qualsevol dubte o mal funcionament de la web, 
+            escriure al Gmail anteriorment proporcionat. 
+            En tot cas, lamentem qualsevol molèstia que això li pugui comportar.
+            Gràcies per la seva atenció.</p>
         </div>
         <div id="seccio_3">
-            <p>Com pots millorar les teves habilitats de diseny?</p>
+            <h2><p>Esperem que aquesta informació pugui ajudar-te moltíssimes gràcies per la teva atenció</p></h2>
         </div>
         <div id="menu">
             <a href="./index.html"> <i id="boto_1" class="fa-solid fa-house"></i></a>
