--- a/shop.html
+++ b/shop.html
@@ -13,16 +13,25 @@
             <h1>THE ATELIER OF DESING</h1>
         </div>
         <div id="inici"></div>
-            <h2>Qui som?</h2>
+            <h2>TENDA</h2>
         </div>
         <div id="seccio_1">
-            <p>Que pots fer en aquesta app?</p>
+            <h2> Que és la tenda?</h2>
+            <p>La tenda és una secció de la nostra web on pots veure la gran varietat de productes gratis que pots pesonalitzar.
+            </p>
         </div>
         <div id="seccio_2">
-            <p>Com s'utilitza?</p>
+            <h2>Quin tipus de coses pots comprar?</h2>
+            <p> A la nostra tenda pots triar a dissenyar moltíssimes coses, com per exemple camisetes, dessuadores, tases, bosses de tela,
+                gorres, jaquetes, fundes de mòvil... i moltes més!
+            </p>
         </div>
         <div id="seccio_3">
-            <p>Com pots millorar les teves habilitats de diseny?</p>
+            <h2>Com pots triar el producte?</h2>
+            <p>Per poder pesonalitzar els productes desitgats, has de clicar damunt el producte i agregar-lo a la cistella,
+                després vas a la cistella i pitges damunt del producte, on et donara l'opció de personalitzar. Has de clicar l'opció
+                de "PERSONALITZA" i ja podríes començar a dissenyar.
+            </p>
         </div>
         <div id="menu">
             <a href="./index.html"> <i id="boto_1" class="fa-solid fa-house"></i></a>
