--- a/user.html
+++ b/user.html
@@ -13,16 +13,26 @@
             <h1>THE ATELIER OF DESING</h1>
         </div>
         <div id="inici"></div>
-            <h2>Qui som?</h2>
+            <h2>Regitrsarse</h2>
+            
         </div>
         <div id="seccio_1">
-            <p>Que pots fer en aquesta app?</p>
+            <h2>Per a que serveix regitrsar-se? </h2>
+            <p>Si vols tenir un compte fitxe en aquesta web,registre't per poder tenir sepre els teus treballs registrats!
+            </p>
         </div>
         <div id="seccio_2">
-            <p>Com s'utilitza?</p>
+            <h2>Com tenir més varietat de projectes?</h2>
+            <p>Si vols tenir un compte fitxe en aquesta web,registre't per poder tenir sepre els teus treballs registrats!
+                Si vols tenir més varietat de dissenys,colors, models...una de les millors opcions és fer-te premium de la 
+                nostra app.Amb aquesta opció tendrás moltes més opcions que al model gratuit. Fes-te premium ja!
+            </p>
         </div>
         <div id="seccio_3">
-            <p>Com pots millorar les teves habilitats de diseny?</p>
+            <h2>Pla premium</h2>
+            <p>Amb aquest pla,només hauras de pagar 3,5€ al mes i podràs tenir una millor experiència a aquesta app i podràs 
+            accedir a moltísimes més opcions de disseny.
+            </p>
         </div>
         <div id="menu">
             <a href="./index.html"> <i id="boto_1" class="fa-solid fa-house"></i></a>
